# v3proc

./: .gitignore  LICENSE.md  Makefile  Makefile.am  README.md  autogen.sh  configure.ac
QuikSCAT_L2BC/: README.html  SConstruct  buildlibs.sh
QuikSCAT_L2BC/exampleconfig/: makeCurlDivergence.rdf  makeFilteredWinds.rdf
QuikSCAT_L2BC/scripts/: processL2BC.py
QuikSCAT_L2BC/test/makeCurlDivergence/: makeCurlDivergence.rdf  plotCurlDivergence.py
QuikSCAT_L2BC/test/makeFilteredWinds/: makeFilteredWinds.rdf  plotFilteredWinds.py
cfg/: QSCAT.12p5km.ove.rdf
eadata/: AfterExtract.C  ArgDefs.h  Args.C  Args.h  ArgsPlus.C  ArgsPlus.h  Backup.C  Backup.h  Binning.C  Binning.h  CmdEffect.C  CmdEffect.h  CmdList.C  CmdList.h  CmdState.C  CmdState.h  Command.C  Command.h  Command_1.h  CommonDefs.C  CommonDefs.h  ConfigList.C  ConfigList.h  Drn.C  Drn.h  DrvParamList.C  DrvParamList.h  EAConfigList.C  EAConfigList.h  EAList.C  EAList.h  EALog.C  EALog.h  EffDetector.C  EffDetector.h  Eqx.C  Eqx.h  ErrorChecker.C  ErrorChecker.h  Filter.C  (+124 more)
eaprograms/: Application.h  Makefile  extract.C  list_filters.C  list_parameters.C
mat/: Makefile  average_to_25km.m  crosstrackbiasmap.mat  fix_rain_impact_bug.m  l2b_extraction.C  os2_netcdf_fixup.m  os2_rel_bias.mat  qs_cf_compliance.m  qs_convert_netcdf.m  read_qs_e2b12.m  rel_bias_130212.mat  update_ct_bias.m
mat/ahchau/: readme.txt
mat/ahchau/DFS_sim/: ConvertToBryanRainToBinary.m  ExtractBoxFromQSHDF.m  ExtractFromRDF.m  FindLineInFile.m  FindWindBoundary.m  GetLooksFromL2A.m  GetQSParamsForSim.m  GrabMetrics.m  InfoAboutToDraganaFileFormat.m  ReadBinaryRain.m  ReadBinaryRain_v1.m  ReadGMF.m  ReadGMF_simQUIKSCAT.m  ReadWRFArray.m  WriteBinaryWindFromToDragana.m  Write_SV_windfield.m  convert_to_binary.m  read_SV_windfield.m  read_l2b_array.m  read_vctr.m  spdnet_matlab.tar  swapem.m
mat/ahchau/GMF_FitRoutines/: ConcatenateSubFiles.m  FilterData.m  FitData_PlotMethods.m  FitGMFCoeffs.m  MakeComparePlot.m
mat/ahchau/IO/: CopyData.m  ExtractNestedField.m  LogFile.m  ReadImageRegion.m  dreadarr.m  myls.m  mysystem.m  stripzeros.m  writearr.m
mat/ahchau/NaN/: datestrNaN.m  meanNaN.m  stdNaN.m  sumNaN.m  varNaN.m  xcorrNaN.m
mat/ahchau/SCAT/: Read_L1B_ave.m
mat/ahchau/SLMtools/: plotslm.m  slmengine.m
mat/ahchau/numerical/: angdif.m  clip.m  invdb.m  speedlight.m
mat/ahchau/random/: randnCorr.m
mat/ahchau/statistics/: hist2d.m  trimFunc.m
mat/ahchau/visual/: Plot_LoopThroughCols.m  colorbarnan.m  makefigs_forslide.m  makefigs_mysize.m  mybluewhitered.m  myfigure.m  myhline.m  myquiver.m  mysubfigure.m  mysuplabel.m  myvline.m  plot3km.m  quiverc2wcmap.m  selectdata.m  subfigure.m  suptitle.m
objs/: AccurateGeom.C  AccurateGeom.h  AmbigTable.C  AmbigTable.h  AngleInterval.C  AngleInterval.h  Antenna.C  Antenna.h  AntennaSim.C  AntennaSim.h  Array.C  Array.h  AscatL1bReader.C  AscatL1bReader.h  AttenMap.C  AttenMap.h  Attitude.C  Attitude.h  BYUXTable.C  BYUXTable.h  BaseFile.C  BaseFile.h  Beam.C  Beam.h  BeamSim.C  BeamSim.h  BitMasks.h  BufferedList.C  BufferedList.h  CAPGMF.C  CAPGMF.h  CAPWind.C  CAPWind.h  CAPWindSwath.C  CAPWindSwath.h  CheckFrame.C  CheckFrame.h  CoastDistance.C  CoastDistance.h  CoastalMaps.C  (+318 more)
programs/: .gitignore  BYUX_vs_time.C  Makefile  Makefile.linux  RS_GSE_merge.C  RS_GSE_to_ephem_quat.C  SNRandKpc.C  accum_lands0.C  analyze_et.C  ascat_szf_to_l1b.C  ascat_szf_to_l1b_new.C  azimuth_balance.C  baseband_errors.C  best.h  best_adapt.C  best_fast.C  best_filter.C  big_filter.C  calp_to_gs.C  calpulse_to_ascii.C  cds_tracking_check.C  check_inst_tracking.C  check_l1b.C  checkframe_extract.C  checkframe_to_ascii.C  class_image.C  compass_train_inpctd.C  convert_beam_pattern.C  convert_pattern.C  distprob.C  distprob_plot.C  done_files.C  doy.C  dtc_apbmc.C  dtc_format.C  dtc_freq.C  dtc_info.C  echo_deltaf.C  echo_dtc.C  echo_funcs.h  (+322 more)
py/: Att.py  ConvertToGS.py  Ephem.py  EphemGetMinzTimes.py  EphemQuatFillGaps.py  ExtractEphemByRev.py  ExtractGSEByRev.py  Factor.py  GSE.py  GSEGapReport.py  GenRevList.py  MakeRangeDopplerTables.py  PreProcessGSE.py  ProcessGSE.py  SimEphem.py  SimQuats.py  Tracker.py  Tracking.py  UpdateRevsDB.py  time_funcs.py  update_gitignore.py
py/pm/: Doxyfile  __init__.py  exclude-files.txt  mainpage.txt
py/pm/DOCS/: dum.dot  pm2.dot
py/pm/constants/: __init__.py  configure.py  paths.py  runtime.py
py/pm/data/: L1A3.pl  __init__.py  files.py  header.py  header_old.py  header_oldest.py
py/pm/database/: Doxyfile  __init__.py  alex.db  mainpage_db.txt  revlist.csv  revlist.py  revs.py  revs.py_bak
py/pm/level0/: __init__.py  check_time.py  injector.py  level_00.rdf_hiding  monitor00.py  sci1.stub  sci2.stub  sci3.stub  sci4.stub  watcher.py
py/pm/names/: __init__.py  aux.py  base.py  names.py
py/pm/observer/: __init__.py  generic.py
py/pm/processor/: __init__.py  errors.py  level_up.py  processor.py
py/pm/utils/: __init__.py  database.py  helper.py  interval.py  rdf_helper.py  time_funcs.py  times.py
py/pp/: ConvertToGS.py  EphemQuatFillGaps.py  ExtractEphemByRev.py  ExtractGSEByRev.py  GSEGapReport.py  GSTables.py  GapMetrics.py  GenRevList.py  MakeRangeDopplerTables.py  NotifyIf.py  PreProcessGSE.py  ProcessGSE.py  UpdateRevsDB.py  __init__.py
py/rdf/: __init__.py  eRDF.py  iRDF.py  parse.py  reserved.py  uRDF.py  utils.py
py/rdf/DOCS/: ._RDF  Users Guide  Doxyfile  mainpage.txt  mainpage.txt~  rdf.dot  si.tiff
py/rdf/data/: __init__.py  entries.py  files.py
py/rdf/language/: __init__.py  errors.py  prosodic.py
py/rdf/test/: __init__.py  new.rdf  old.rdf  rdf.txt  rdf2.txt  rdf3.txt  rdf4.txt  uni.txt  wrap.txt
py/util/: ang.py  file.py  rot.py  time.py
scripts/: EphemGetMinzTimes.py  ExtractEphemFromGSE.sh  GenRevList.py  IsGSE.py  IsSCI.py  Makefile  PreProcessGSE.sh  generate_kprtable  grid_script  l2b_eval  l2b_metrics_plot  l2b_rms_plot  l2b_six_plot  process_script  sim_script  sim_script_update
sh/: build-md5s.sh  oceansat2.py  oscat2-fixup.sh  oscat2-reprocess.sh  quikscat-reprocess.cfg  quikscat-reprocess.sh
(+96 files in other folders)
